tests/specs/ecosystem/pedrokehl/caminho/1_3_3.test
pedrokehl/caminho/1.3.3
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { from, From } from "./from.ts";
               ~~~~
    at file://<tmpdir>/src/index.ts:7:16

TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { fromItem, type FromItemParams, FromItem } from "./from.ts";
                                        ~~~~~~~~
    at file://<tmpdir>/src/index.ts:8:41

TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { fromArray, type FromArrayParams, FromArray } from "./from.ts";
                                          ~~~~~~~~~
    at file://<tmpdir>/src/index.ts:9:43

TS1205 [ERROR]: Re-exporting a type when 'isolatedModules' is enabled requires using 'export type'.
export { fromFn, type FromFnParams, FromFn } from "./from.ts";
                                    ~~~~~~
    at file://<tmpdir>/src/index.ts:10:37

Found 4 errors.

